--- a/modules/ROOT/pages/deployment/general/general-info.adoc
+++ b/modules/ROOT/pages/deployment/general/general-info.adoc
@@ -126,17 +126,10 @@ If you have not started up `ocis server` but try to file a runtime command excep
 
 [source,plaintext]
 ----
-2022/04/04 13:57:32 dialing:dial tcp 127.0.0.1:9250: connect: connection refused
+Failed to connect to the runtime. Has the runtime been started and did you configure the right runtime address (localhost:9200)
 ----
 
-This info contains a:
-
-* Timestamp
-* The statement that it tries to call the following address
-* The connection type and address
-* The reason it failed
-
-The term _dial/connect_ in the error message above comes from the Dial function of the _net_ package in Golang which connects to a server address on a named network.
+To fix this, start the runtime with `ocis server` first and redo the command.
 
 == Configuration of oCIS
 
@@ -292,7 +285,7 @@ ocis server
 
 == Login With Demo Users
 
-// fixme: needs checking
+// fixme: https://github.com/owncloud/ocis/pull/3474 ([full-ci] set demo users to default off)
 
 With a fresh installation of oCIS, you can log in via the web interface at `\https://localhost:9200` (or the URL you defined) using one of the demo users provided for testing purposes:
 
