--- a/modules/ROOT/pages/deployment/general/general-info.adoc
+++ b/modules/ROOT/pages/deployment/general/general-info.adoc
@@ -126,7 +126,7 @@ If you have not started up `ocis server` but try to file a runtime command excep
 
 [source,plaintext]
 ----
-Failed to connect to the runtime. Has the runtime been started and did you configure the right runtime address (localhost:9200)
+Failed to connect to the runtime. Has the runtime been started and did you configure the right runtime address (localhost:9200)?
 ----
 
 To fix this, start the runtime with `ocis server` first and redo the command.
