--- a/modules/ROOT/pages/deployment/general/general-info.adoc
+++ b/modules/ROOT/pages/deployment/general/general-info.adoc
@@ -74,6 +74,8 @@ This will print an output like:
 
 == Managing Extensions
 
+Extensions are microservices which can be started, stopped or instantinated. Because there is a difference between extensions which are part of the runtime and extensions outside the runtime, an in-depth documentation as been added to explain some background. Please read carefully to avoid unwanted behaviour. For details see the xref:deployment/extensions/extensions.adoc[Extensions] documentation.
+
 === List Available Extensions
 
 Type `ocis help` to get a list of available extensions.
@@ -96,7 +98,7 @@ ocis run proxy --config-file=/path/proxy.yaml
 ----
 ====
 
-NOTE: This configuration file must contain *ALL* configuration details as no xref:configuration-of-ocis[configuration arithmetics] is applied. 
+NOTE: This configuration file must contain *ALL* configuration details for this extensions, see the xref:configuration-of-ocis[configuration arithmetics] for more details. 
 
 // fixme: tell the reason, it uses the same PID...
 
@@ -157,7 +159,7 @@ NOTE: Administrators must be aware of the sources, the location and order applie
 * For binary releases +
 `$HOME/.ocis/config/`
 +
-NOTE: You can define a nonstandard configuration file location on startup using the environment variable `OCIS_CONFIG_FILE`
+NOTE: You can define a deviating from default configuration file location on startup using the environment variable `OCIS_CONFIG_FILE`
 +
 NOTE: When using a system user for the runtime which has no login and therefore no home directory like when used xref:deployment/manual/manual-setup.adoc#setting-up-systemd-for-ocis[Setting up systemd for oCIS], you _must_ specify a configuration file location.
 
@@ -232,7 +234,7 @@ log:
 
 == Accessing oCIS Via the WebUI
 
-You can easily access oCIS via ownCloud Web with minimal configuration needs. Without going into too much detail, you need to provide the following two environment variables. See also the section about xref:handling-certificates[] and xref:login-with-demo-users[].
+You can easily access oCIS via ownCloud Web with minimal configuration needs. Without going into too much detail, you need to provide the following two environment variables. See also the section about xref:handling-certificates[] and xref:demo-users-and-groups[].
 
 OCIS_URL::
 Expects a URL including _protocol_, _host_ and optionally _port_ to simplify configuring all the different services. Other extension environment variables also using an URL still take precedence if set, but will fall back to this URL if not set.
@@ -327,7 +329,7 @@ ocis server
 
 [caption=]
 .Demo users and groups created by the above command
-[width="80%",cols="30%,30%,45%,25%,40%",options="header"]
+[width="90%",cols="30%,30%,45%,25%,50%",options="header"]
 |===
 | Username
 | Password
