--- a/modules/ROOT/pages/deployment/extensions/extensions.adoc
+++ b/modules/ROOT/pages/deployment/extensions/extensions.adoc
@@ -10,7 +10,7 @@
 == Instantiation of Extensions
 
 Extensions get connected by a user or process. Due to the nature of 
-image:deployment/extensions/go_logo_blue.svg[width=40], the programming language used for oCIS, each connection will create a thread which will be released when the connection ends. This means, that as long you have ressources like CPU and memory, there will be as many threads created by extensions as necessary and freed accordingly. All extensions started on the server share the same resource pool.
+image:deployment/extensions/go_logo_blue.svg[width=40], the programming language used for oCIS, each connection will create a thread which will be terminated when the connection ends. This means that as long you have sufficient resources regarding CPU and memory, there will be as many threads created by extensions as necessary and terminated accordingly. All extensions started on the server share the same resource pool.
 
 The image below illustrates the following, where the extensions used are just examples. It could be one extension or many extensions running concurrently: 
 
