--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -55,7 +55,7 @@ With knowledge about architecture and concepts, look at the different xref:avail
 
 With oCIS, not much is needed to run your ownCloud server the way you want. Check out the details in the xref:prerequisites/index.adoc[Prerequisites] section. We strongly recommend to make up your mind about availability and scalability first.
 
-=== Installation
+=== Deployment
 
 oCIS can be deployed via docker or you can run it manually installed on a physical or virtual machine. Take a look at the xref:deployment/index.adoc[deployment] options for more details.
 
