--- a/modules/ROOT/pages/deployment/general/general-info.adoc
+++ b/modules/ROOT/pages/deployment/general/general-info.adoc
@@ -140,7 +140,7 @@ Failed to connect to the runtime. Has the runtime been started and did you confi
 
 To fix this, start the runtime with `ocis server` first and redo the command.
 
-== Configuration of oCIS
+== Configuration Rules
 
 // taken from: https://owncloud.dev/ocis/config/
 // fixme: this is according to willy going to be changed. see: https://github.com/owncloud/ocis/pull/3480
@@ -233,7 +233,7 @@ log:
   file: [ path/to/log/file ] # MUST not be used with pretty = true
 ----
 
-== Accessing oCIS Via the WebUI
+== Configurations to Access the WebUI
 
 You can easily access oCIS via ownCloud Web with minimal configuration needs. Without going into too much detail, you need to provide the following two environment variables. See also the section about xref:handling-certificates[] and xref:demo-users-and-groups[].
 
@@ -247,7 +247,7 @@ When using `0.0.0.0:9200`, the proxy will listen to all available interfaces. If
 
 // fixme: explain the proxy - but on a different page.
 
-== Handling Certificates
+=== Handling Certificates
 
 // https://owncloud.dev/ocis/deployment/basic-remote-setup/
 
@@ -306,11 +306,36 @@ The following rules apply:
 
 NOTE: You must set this environment variable to a valid path when using the manual installation having a system user for oCIS, because a system user has no logon and therefore no home directory!
 
-WARNING: The location used must be exclusively used by oCIS. Writing into this location not using oCIS is strictly discouraged to avoid any unexpected behaviour. 
+WARNING: The location must exclusively be used by oCIS. Writing into this location not using oCIS is strictly discouraged to avoid any unexpected behaviour. 
 
-== Demo Users and Groups
+== Default Users and Groups
 
-=== Create Demo Users and Groups
+=== Admin User
+
+When you have started oCIS for the first time, an admin user will be created with following credentials:
+
+[caption=]
+.Admin user and group created on first ocis start
+[width="90%",cols="30%,30%,45%,25%,50%",options="header"]
+|===
+| Username
+| Password
+| Email
+| Role
+| Group
+
+| admin
+| admin
+| \admin@example.org
+| admin
+| users
+|===
+
+You can login the webinterface with this admin user and change relevant data accoring your needs. As an example to reach out the webinterface use `\https://localhost:9200`.
+
+=== Demo Users and Groups
+
+==== Create Demo Users and Groups
 
 // https://owncloud.dev/ocis/getting-started/index
 // https://owncloud.dev/ocis/getting-started/demo-users/
@@ -321,6 +346,8 @@ WARNING: You can let oCIS create demo users and groups for testing purposes. Bec
 To let oCIS create these demo users and groups for you, start the _runtime_ one time with:
 
 // fixme: the admin user is not part of the demo users but currently created by this process. when the new LibreIDM is in place, a new bootstrap process will be implemented checking for an admin user precense and creates one if not - but this is outside the demo user stuff ! - therefor we need to remove the admin user most likely here (and readd it "somewhere" else)... see: https://github.com/owncloud/ocis/pull/3507
+
+// fixme: as the LibreIDM is close to get implemented, the admin user is already take out from the demo set and is described above. 
 
 [source,bash]
 ----
@@ -337,12 +364,6 @@ ocis server
 | Email
 | Role
 | Groups
-
-| admin
-| admin
-| \admin@example.org
-| admin
-| users
 
 | einstein
 | relativity
@@ -388,7 +409,7 @@ physics-lovers, +
 quantum-lovers
 |===
 
-You can now login with one of the users created using the `OCIS_URL` in you browser like `\https://localhost:9200`. 
+You can now login with one of the demo users created using the `OCIS_URL` in you browser like `\https://localhost:9200`. 
 
 === Manage Users and Groups
 
