--- a/modules/ROOT/partials/nav.adoc
+++ b/modules/ROOT/partials/nav.adoc
@@ -10,6 +10,7 @@
 *** xref:deployment/security.adoc[Securing oCIS]
 *** xref:deployment/nfs.adoc[Network File System Deployment]
 *** xref:extensions/index.adoc[Extensions]
+**** xref:extensions/audit.adoc[Audit Service Configuration]
 ** xref:migration/index.adoc[Migrating from ownCloud 10 to ownCloud Infinite Scale]
 ** xref:configuration/index.adoc[Configuration]
 *** xref:configuration/ocis-config.adoc[Configuration of ownCloud Infinite Space]
